--- a/mod2_solution/css/styles.css
+++ b/mod2_solution/css/styles.css
@@ -1,21 +1,58 @@
 /********** Base styles **********/
 * {
-  box-sizing: border-box;
-  margin: 15px;
-  padding: 10px;
+    box-sizing: border-box;
 }
 
+h1 {
+    margin-left: 20px;
+    font-size: 175%;
+    text-align: center;
+}
+
+h2 {
+    position: relative;
+    right:20px;
+    float:right;
+    border: 1px solid black;
+    padding: 5px;
+    font-size: 125%;
+}
+
+p {
+    margin:10px;
+    padding:10px;
+    clear:right;
+    font-family: cursive, sans-serif, monospace;
+}
+
+div .box {
+    background-color:darkgray;
+    border: 1px solid black;
+    margin: 10px;
+}
+
+#section1 h2{
+    background-color: #0093D1;
+}
+
+#section2 h2{
+  background-color: #F2635F;
+}
+
+#section3 h2{
+  background-color: #F4D00C;
+}
 
 /* Simple Responsive Framework. */
 .row {
-  width: 100%;
+    width: 100%;
+    word-wrap: break-word;
 }
 
 /********** Desktop only **********/
 @media (min-width: 992px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -59,7 +96,6 @@
 @media (min-width: 768px) and (max-width: 991px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-sm-1 {
     width: 8.33%;
@@ -103,7 +139,6 @@
 @media (max-width: 767px) {
   .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-xs-1 {
     width: 8.33%;
